fix youtube player on Firefox

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -139,7 +139,6 @@ body#soundcloudify {
 }
 
 #invisible-player {
-  display: none;
   width: 0px;
   height: 0px;
 }
